--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 	compile group: 'com.linecorp.bot', name: 'line-bot-model', version: '2.3.0'
 	// https://mvnrepository.com/artifact/com.linecorp.bot/line-bot-cli
 	compile group: 'com.linecorp.bot', name: 'line-bot-cli', version: '2.3.0'
+	compile('org.postgresql:postgresql')
 }
