--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.linecorp.bot/line-bot-cli
 	compile group: 'com.linecorp.bot', name: 'line-bot-cli', version: '2.3.0'
 	compile('org.postgresql:postgresql')
+	compile 'org.projectlombok:lombok'
 }
